# c_ide_rust

./: .editorconfig  .gitignore  AGENTS.md  AGENTS_EN.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_4_6_1.md  Cide.slnx  LICENSE  README.md  README_EN.md  REVIEW_REPORT_2026-05-18.md  REVIEW_REPORT_2026-05-18_FULL.md  build-release.ps1  build.ps1  rustfmt.toml  test-mobile.ps1
native/: CMakeLists.txt  Cargo.toml  clippy.toml
native/.cargo/: config.toml
native/benches/: unified_perf_baseline.c  vm_benchmark.rs
native/crates/cide_algorithm_steps/: Cargo.toml
native/crates/cide_algorithm_steps/src/: dp.rs  graph.rs  lib.rs  math.rs  search.rs  sorting.rs  structures.rs  tree.rs
native/crates/cide_ast/: Cargo.toml
native/crates/cide_ast/src/: decl.rs  expr.rs  lib.rs  stmt.rs  types.rs
native/crates/cide_codegen/: Cargo.toml
native/crates/cide_codegen/src/: expr.rs  func.rs  init.rs  lib.rs  tests.rs
native/crates/cide_cpp_frontend/: Cargo.toml
native/crates/cide_cpp_frontend/src/: builtin_layout.rs  builtin_layout_data.json  lib.rs  type_map.rs
native/crates/cide_lexer/: Cargo.toml
native/crates/cide_lexer/src/: comment.rs  expand.rs  keyword.rs  lib.rs  macros.rs  number.rs  preprocessor.rs  string.rs  token.rs
native/crates/cide_parser/: Cargo.toml
native/crates/cide_parser/src/: cpp.rs  decl.rs  lib.rs  stmt.rs  type_.rs
native/crates/cide_runtime/: Cargo.toml
native/crates/cide_runtime/src/: bytecode_libc_index.rs  bytecode_libc_sig.rs  func_meta.rs  host_func_id.rs  instruction.rs  lib.rs  opcode.rs  (+5 more)
native/crates/cide_shared/: Cargo.toml
native/crates/cide_typeck/: Cargo.toml
native/crates/cide_vm/: Cargo.toml
native/include/: cide_capi.h
native/runtime_libc/cide/: layouts.toml  list.cpp  list_int.c  list_int.cpp  sort_int.c  sort_int.cpp  string.c  string.cpp  vec_char.c  vec_float.c  vec_int.c  vector.cpp  vector_char.cpp  vector_float.cpp  vector_int.cpp
native/runtime_libc/include/: assert.h  ctype.h  errno.h  float.h  limits.h  math.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h
native/runtime_libc/src/: ctype.c  stdlib.c  string.c
native/src/: flutter_bridge.rs  frb_generated.rs  lib.rs  session.rs
native/src/api/: cide.rs  mod.rs
native/src/capi/: CideSession.hpp  cide_capi.cpp  mod.rs
native/src/compiler/: Ast.hpp  BytecodeGen.cpp  BytecodeGen.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  TypeChecker.cpp  TypeChecker.hpp  algorithm_detector.rs  ast.rs  bytecode_gen.rs  cfg.rs  data_flow.rs  intent.rs  lexer.rs  mod.rs  parser.rs  type_checker.rs
native/src/diagnostics/: AlgorithmMatcher.cpp  AlgorithmMatcher.hpp  ErrorCodes.hpp  error_catalog.rs  error_codes.rs  knowledge_graph.rs  learning_path.rs  misconception_patterns.rs  mod.rs
native/src/engine/: compile_pipeline.rs  completion.rs  mod.rs  session_ops.rs
native/src/shared/: func_meta.rs  mod.rs  source_loc.rs  symbol.rs  type_utils.rs
native/src/unified/: algorithm_steps.rs  checkpoint.rs  collector.rs  engine.rs  mod.rs  root_cause.rs  stream.rs  trace_analyzer.rs  types.rs
native/src/vm/: CideVM.cpp  CideVM.hpp  HostFunctions.cpp  HostFunctions.hpp  Instruction.hpp  OpCode.hpp  bytecode_libc_data.json  bytecode_libc_index.rs  bytecode_libc_loader.rs  bytecode_libc_sig.rs  host_func_id.rs  host_funcs.rs  instruction.rs  jit_templates.rs  jit_trace.rs  mod.rs  opcode.rs  snapshot.rs  vfs.rs  vm.rs
native/tests/: AlgorithmMatchTest.cpp  BYTECODE_LIBC_FAILURES.md  CPP_FAILURES.md  DIFFERENTIAL_FAILURES.md  DOGFOODING_FAILURES.md  E2E_FAILURES.md  FUZZ_FAILURES.md  HOST_CONTRACT_FAILURES.md  IncludeScanfFinalTest.cpp  KR_FAILURES.md  LEETCODE_FAILURES.md  MinimalTest.cpp  Phase2RegressionTest.cpp  Phase3Batch1Test.cpp  Phase3Batch2Test.cpp  Phase3Batch3Test.cpp  Phase3Batch4Test.cpp  Phase3StepTest.cpp  Stage2DiagnosticTest.cpp  StructInitTest.cpp  ast_unit_test.rs  b10_new_array_rollback.rs  bytecode_gen_cpp_unit_test.rs  bytecode_gen_unit_test.rs  bytecode_libc_consistency.rs  cide_e2e.rs  compile_pipeline_test.rs  completion_unit_test.rs  cpp_dogfooding_test.rs  differential_stress.rs  e2e_multi_file.rs  end_to_end_extra_test.rs  end_to_end_test.rs  fuzz_stress_test.rs  host_contract_tests.rs  jit_templates_test.rs  jit_unit_test.rs  lexer_unit_test.rs  parser_cpp_unit_test.rs  parser_unit_test.rs  (+14 more)
native/tests/cases_golden/: GOLDEN_FAILURES.md  activitySelection_default.out  bTree_default.out  bellmanFord_default.out  bstDelete_default.out  bstSearch_default.out  bubble_default.out  bucketSort_default.out  computeNextVal_default.out  countingSort_default.out  criticalPath_default.out  dijkstra_default.out  externalSort_default.out  floyd_default.out  heapSort_default.out  huffmanTree_default.out  isPrime_default.out  josephus_default.out  kruskalMST_default.out  linkedStack_default.out  linked_default.out  polynomialAdd_default.out  quick_default.out  radixSort_default.out  redBlackTree_default.out  seqList_default.out  shellSort_default.out  stringBasicOps_default.out  topologicalSort_default.out  treeNode_default.out
native/tests/cases_template_generated/: E2E_FAILURES.md  activitySelection_default.c  array_default.c  avlTree_default.c  bTree_default.c  bellmanFord_default.c  bfs_default.c  binarySearchTreeValidation_default.c  binary_default.c  bstDelete_default.c  bstInsert_default.c  bstSearch_default.c  bubble_default.c  bucketSort_default.c  circularLinkedList_default.c  circularQueue_default.c  computeNextVal_default.c  countingSort_default.c  criticalPath_default.c  deque_default.c  dfs_default.c  dijkstra_default.c  doublyLinkedList_default.c  dpCoinChange_default.c  dpFib_default.c  dpKnapsack_default.c  dpLCS_default.c  dpLIS_default.c  externalSort_default.c  factorial_default.c  fib_default.c  fibonacciSearch_default.c  floyd_default.c  gcd_default.c  hanoi_default.c  hashTable_default.c  heapSort_default.c  huffmanTree_default.c  infixEvaluation_default.c  inorder_default.c  (+43 more)
native/tests/shadow_verification/: gen_cases.py  new_cases.txt  shadow_verify.py  test_massive.py  test_more.py
(+1656 files in other folders)
