[package]
name = "cide_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flutter_rust_bridge = "=2.12.0"
libm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "cide_cli"
path = "src/bin/cide_cli.rs"

[[bench]]
name = "vm_benchmark"
harness = false

[profile.release]
debug = false
lto = "thin"
strip = true

[profile.dev]
opt-level = 1
