[package]
name = "cide_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
# 逐步收敛：先 warn，避免一次性阻塞构建；达到 0 警告后可提升为 deny。
unwrap_used = "warn"
expect_used = "warn"
# 教学项目，文档负担不宜过重。
missing_panics_doc = "allow"
# 提示超大函数，辅助后续拆分。
too_many_lines = "warn"
# 部分类型确实复杂，允许。
type_complexity = "allow"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flutter_rust_bridge = "=2.12.0"
libm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "cide_cli"
path = "src/bin/cide_cli.rs"

[[bench]]
name = "vm_benchmark"
harness = false

[profile.release]
debug = false
lto = "thin"
strip = true

[profile.dev]
opt-level = 1
