[workspace]
members = ["crates/cide_ast", "crates/cide_shared", "."]
resolver = "2"

[package]
name = "cide_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
# 生产代码 unwrap/expect 已收敛至 17 处且均有 SAFETY 注释与 #[allow]；
# 测试代码与 FRB 生成代码通过 lib.rs 与模块级 #[allow] 豁免。
unwrap_used = "deny"
expect_used = "warn"
# 教学项目，文档负担不宜过重。
missing_panics_doc = "allow"
# 提示超大函数，辅助后续拆分。
too_many_lines = "warn"
# 部分类型确实复杂，允许。
type_complexity = "allow"

[dependencies]
cide_ast = { path = "crates/cide_ast" }
cide_shared = { path = "crates/cide_shared" }
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.149"
flutter_rust_bridge = "=2.12.0"
libm = "~0.2.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "cide_cli"
path = "src/bin/cide_cli.rs"

[[bench]]
name = "vm_benchmark"
harness = false

[profile.release]
debug = false
lto = "thin"
strip = true

# CI 中通过 apt 安装 binaryen 后手动运行 wasm-opt，避免 wasm-pack 自动下载失败或版本特性名不兼容。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 1
